# impedance-rs

./: Cargo.toml
src/: application_state.rs  commands.rs  constants.rs  debug.rs  event_handler.rs  helpers.rs  main.rs  speak.rs  voice_state.rs  voicevox.rs
