[package]
name = "impedance-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
poise = "0.5.7"
reqwest = { version = "0.11.22", features = ["json"] }
songbird = { version = "0.3.2", features = ["builtin-queue"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
